# laeka-brain

./: README.md  pyproject.toml  requirements-lock.txt  smoke_v02.py
.github/workflows/: e2e-smoke.yml
src/laeka_brain/: __init__.py  client.py  config.py  server.py  tools.py
src/laeka_brain_mcp/: client.py  config.py  server.py  tools.py
tests/: test_client.py  test_tools.py
tests/live/: test_mcp_live.py
