[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "laeka-brain-mcp"
version = "0.1.0"
description = "MCP server — Laeka Brain cognitive layer for Claude Code"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["mcp", "claude", "laeka", "brain", "omniq"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
laeka-brain-mcp = "laeka_brain_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/laeka_brain_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[tool.hatch.metadata]
allow-direct-references = true
